<resources>
    <string name="app_name">Where We</string>

    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_summary">Вкл. или выкл. сеть WiFi</string>
    <string name="hints_title">Подсказки</string>
    <string name="hints_summary">Показывать подсказки</string>
    <string name="googleplay_url">https://play.google.com/store/apps/details?id=ru.nwts.appsyoutube</string>

    <string name="about">О приложении</string>
    <string name="prefer">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="prof_scae">Масштабировать</string>

    <string-array name="channel_names">
        <item>Список абонентов</item>
        <item>Добавить абонента</item>
        <item>Передать свои данные для подключения</item>
        <item>Отключиться от системы</item>
        <item>Масштабировать</item>
        <item>О приложении</item>
        <item>Настройки</item>
    </string-array>

    <string-array name="channel_names_RecyclerViewsActivity">
        <item>Вернуться к карте</item>
        <item>Добавить абонента</item>
        <item>Передать свои данные для подключения</item>
        <item>Отключиться от системы</item>
        <item>...........</item>
        <item>О приложении</item>
        <item>Настройки</item>
    </string-array>

    <string name="allowedReceivedLocation">Мое местоположение</string>
    <string name="hintAllowedReceivedLocation">Разрешить передавать информацию о моем м местоположении</string>
    <string name="hintAllowedViewServiceLocation">Показывать значок при определении местоположения</string>
    <string name="allowedViewLocation">Определение и передача места</string>
    <string name="youname">Введите свое имя</string>
    <string name="hint_yourname">Введите свое имя</string>
    <string name="summary_yourname">Это необязательно</string>

    <string name="pref_app_title">О приложении</string>
    <string name="pref_app_summary">Отображение местоположения друзей на карте</string>
    <string name="pref_version_title">Версия сборки</string>
    <!--<string name="pref_version_summary">7.7</string>-->
    <string name="pref_developer_title">Разработчик</string>
    <string name="pref_developer_summary">A.Lyapustin</string>
    <string name="pref_share_title">Поделитесь приложением</string>
    <string name="pref_share_summary">Расскажите друзьям об этом приложении</string>
    <string name="pref_rate_review_title">Поставьте оценку</string>
    <string name="pref_rate_review_summary">Оцените приложение и оставьте отзыв в GooglePlay</string>

    <string name="pref_share_key">prefShareKey</string>
    <string name="pref_rate_review_key">prefRateReviewKey</string>

    <string name="share_to">Поделиться</string>
    <string name="subject">WhereWe</string>
    <string name="message">Вы можете скачать приложение "Видеоуроки Start Android" для Android в </string>

    <string name="dialog_title_yes_no">Важно!</string>
    <string name="dialog_title_yes_no_logout">Обновление инормации будет невозможно!</string>
    <string name="dialog_question_yes_no">Вы уверены?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="frag_btn_ok">OK</string>
    <string name="frag_btn_negative">Отказаться</string>

    <string name="hintAllowedSMSRead">Разрешение читать входящие СМС</string>
    <string name="allowedSMSRead">Чтение СМС</string>
    <string name="textViewCardHeadNaME">Наименование:</string>
    <string name="textViewCardHeadEmail">Электронный адрес</string>

    <string name="mene_option1">Открыть</string>
    <string name="mene_option2">Зарезервировано</string>
    <string name="mene_option3">Удалить</string>

    <string name="delete_attention">Вы не можете удалить запись о себе!</string>
    <string name="delete_completed">Запись удалена.</string>
    <string name="delete_error">Ошибка удаления записи.</string>
    <string name="update_done">Запись обновлена.</string>
    <string name="update_error">Произошла ошибка при обновлении записи.</string>

    <string name="dialog_edit_one_titile">Редактирование наименования абонента</string>
    <string name="dialog_edit_one_email">E-mail абонента (не редактируется)</string>
    <string name="dialog_edit_one_name">Наименование абонента</string>

    <string name="dialog_insert_new_abonent_title">Вставьте строку:</string>
    <string name="dialog_insert_new_abonent_hint">Полученная строка::</string>

    <string name="scale">Масштаб</string>
    <string name="word_marker_time">Обновлено:</string>
    <string name="build">Сборка:</string>
    <string name="pref_setting">Настройки</string>
    <string name="prompt_email">Email</string>
    <string name="bottom_menu_abonent">Абонент</string>
    <string name="bottom_menu_statistics">Статистика</string>
    <string name="bottom_menu_track">Карта</string>
    <string name="ed_name_abonent">Наименование абонента</string>
    <string name="btn_save">Сохранить</string>
    <string name="choice_image_abonent">Выберите изображение</string>
    <string name="service_notification_remind">Определение местоположения</string>
    <string name="service_notification_remind_desc">Работает сервис определения местоположения</string>
    <string name="service_notification_run">Запуск сервиса определения местоположения!</string>


</resources>
