<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/youname"
        android:hint="@string/hint_yourname"
        android:key="YouName"
        android:summary="@string/summary_yourname"
        android:dialogTitle="@string/summary_yourname"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wifi"
        android:summary="@string/wifi_summary"
        android:title="@string/wifi_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hints"
        android:summary="@string/hints_summary"
        android:title="@string/hints_title"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="allowedSendLocation"
        android:summary="@string/hintAllowedReceivedLocation"
        android:title="@string/allowedReceivedLocation"/>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="allowedSMSRead"
        android:summary="@string/hintAllowedSMSRead"
        android:title="@string/allowedSMSRead"/>
    <ListPreference
        android:key="behaviour"
        android:title="Type work sensor"
        android:summary="Set type sensor"
        android:defaultValue="1"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:dialogTitle="Input type work sensor, please" />
</PreferenceScreen>