<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_orders"
        android:enabled="true"
        android:icon="@drawable/ic_abonent"
        android:title="@string/bottom_menu_abonent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_balance"
        android:enabled="true"
        android:icon="@drawable/ic_abonent_stat"
        android:title="@string/bottom_menu_statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cart"
        android:enabled="true"
        android:icon="@drawable/ic_abonent_track"
        android:title="@string/bottom_menu_track"
        app:showAsAction="ifRoom" />
</menu>